<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_receiver"
            android:icon="@drawable/ic_scan"
            android:title="@string/menu_receiver" />
        <item
            android:id="@+id/nav_sender"
            android:icon="@drawable/ic_file"
            android:title="@string/menu_sender" />

        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/ic_more"
            android:title="@string/menu_more" />

        <item
        android:id="@+id/nav_about_me"
        android:icon="@drawable/ic_about_me"
        android:title="@string/menu_about_me" />
    </group>
</menu>