<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.aboutMe.AboutMeFragment">

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/ic_launcher"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:layout_marginStart="18dp"
       android:layout_marginTop="24dp"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/text_about_introduce_short"
        android:layout_marginStart="18dp"
        android:layout_marginTop="6dp"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/text_about_idea_from"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/text_about_target_problem"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/text_about_based_on_title"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/black"
        android:textSize="22sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/text_about_based_on_item1"
        android:layout_marginStart="18dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/text_about_based_on_item2"
        android:layout_marginStart="18dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/text_about_github_title"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/black"
        android:textSize="22sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/text_about_github_url"
        android:layout_marginStart="18dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        android:textSize="16sp"/>

</LinearLayout>