<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_receiver">

    <fragment
        android:id="@+id/nav_receiver"
        android:name="com.zwn.qrmessager.ui.receiver.ReceiverFragment"
        android:label="@string/menu_receiver"
        tools:layout="@layout/fragment_sender" />

    <fragment
        android:id="@+id/nav_sender"
        android:name="com.zwn.qrmessager.ui.sender.SenderFragment"
        android:label="@string/menu_sender"
        tools:layout="@layout/fragment_receiver" />

    <fragment
        android:id="@+id/nav_more"
        android:name="com.zwn.qrmessager.ui.more.MoreFragment"
        android:label="@string/menu_more"
        tools:layout="@layout/fragment_more" />
</navigation>