<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.receiver.ReceiverFragment">

    <TextView
        android:id="@+id/text_file_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        />

    <com.huawei.uikit.hwbutton.widget.HwButton
        android:id="@+id/btn_choose_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_choose_file"
        android:layout_marginTop="56dp"
        />

    <com.huawei.uikit.hwbutton.widget.HwButton
        android:id="@+id/btn_confirm_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_confirm_trans"
        android:layout_marginTop="32dp"
        />

    <TextView
        android:id="@+id/text_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_choose_file_tip"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        />

</LinearLayout>