<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.more.MoreFragment">

    <TextView
        android:text="@string/way_to_go_title"
        android:id="@+id/way_to_go_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="textStart"
        android:textSize="24sp" />
    <TextView
        android:text="@string/way_to_go_content1"
        android:id="@+id/way_to_go_content1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="viewStart"
        android:textSize="16sp" />
    <TextView
        android:text="@string/way_to_go_content2"
        android:id="@+id/way_to_go_content2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="viewStart"
        android:textSize="16sp" />
</LinearLayout>